# transcripty

./: .gitignore  LICENSE  README.md  pyproject.toml
src/transcripty/: audio_recorder.py  main.py  whisper_client.py
typings/flet/: __init__.pyi  version.pyi
typings/flet/auth/: __init__.pyi
typings/flet/canvas/: __init__.pyi
typings/flet/fastapi/: __init__.pyi  app.pyi  flet_app.pyi  flet_app_manager.pyi  flet_fastapi.pyi  flet_oauth.pyi  flet_static_files.pyi  flet_upload.pyi  oauth_state.pyi  serve_fastapi_web_app.pyi
typings/flet/map/: __init__.pyi
typings/flet/security/: __init__.pyi
typings/flet/utils/: __init__.pyi
